--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,2 +1,4 @@
+- date: September 21, 2017
+  news: <a href="cfp.html">Call for papers</a> is online
 - date: September 19, 2017
   news: Web site is up
