--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -4,9 +4,9 @@
 - name: Supporters
   url: /supporters.html
   icon: fa-handshake-o
-- name: "<b>>> Call for Papers <<</b>"
+- name: "<b>>> Call for Workshops <<</b>"
   icon: fa-bullhorn
-  url: /cfp.html
+  url: /cfw.html
 - name: Committees
   icon: fa-users
   submenu:
@@ -53,8 +53,10 @@
       url: /submission.html
     - name: Camera-Ready Instructions
       url: /camera-ready.html
-    - name: Call for Papers
+    - name: <del>Call for Papers</del>
       url: /cfp.html
+    - name: Call for Workshops
+      url: /cfw.html
     # - name: Call for Posters
     #   url: /cf-posters.html
     # - name: Call for Demos
