--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: January 10, 2018
+  news: <a href="cfw.html">Call for workshops</a> is online
 - date: September 21, 2017
   news: <a href="cfp.html">Call for papers</a> is online
 - date: September 19, 2017
