workshop-dipon: Extend deadline

--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -52,7 +52,7 @@
       url: /workshop-frontiers.html
     - name: SmartObjects
       url: /workshop-smartobjects.html
-    - name: Distributed Information Processing in Wireless Networks
+    - name: DIPON
       url: /workshop-dipon.html
     - name: Mobile IoT Sensing, Security, and Privacy
       url: /workshop-iot-sensing.html
