--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: April 5, 2018
+  news: <a href="registration.html">Registration</a> is open
 - date: January 27, 2018
   news: <a href="cf-posters.html">Call for Posters</a> and <a href="cf-demos.html">Call for Demos</a> are online
 - date: January 10, 2018
