--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -31,8 +31,13 @@ posters-1:
 
 posters-2:
   track: posters
-  date: April 6, 2018
+  date: <del>April 6, 2018</del>
   info: Notification of Acceptance
+
+posters-2-ext:
+  track: posters
+  date: April 11, 2018
+  info: Delayed Notification of Acceptance
 
 posters-3:
   track: posters
@@ -42,7 +47,7 @@ posters-3:
 demos-1:
   track: demos
   date: March 2, 2018
-  info: Poster Submission Deadline
+  info: Demo Submission Deadline
   important: true
 
 demos-2:
