Camera-ready instructions

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: April 9, 2018
+  news: <a href="camera-ready.html">Camera-ready instructions</a> are now online
 - date: April 5, 2018
   news: <a href="registration.html">Registration</a> is open
 - date: January 27, 2018
