Add news and extra date item

--- a/_data/dates.yml
+++ b/_data/dates.yml
@@ -139,6 +139,12 @@ cfw-4:
 
 conference:
   track: main
+  info: Workshops
+  date: June 25, 2018
+  important: true
+
+conference:
+  track: main
   info: Conference
   date: June 25, 2018 - June 29, 2018
   important: true
