--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: May 3, 2018
+  news: <a href="program.html">Preliminary program</a> is now online
 - date: April 9, 2018
   news: <a href="camera-ready.html">Camera-ready instructions</a> are now online
 - date: April 5, 2018
