Post program highlights

--- a/_data/navbar.yml
+++ b/_data/navbar.yml
@@ -36,6 +36,8 @@
   submenu:
     - name: Program
       url: /program.html
+    - name: Program Highlights
+      url: /keynotes.html
 #       # icon: fa-list-ul
 #     - name: Posters
 #       url: /program-posters.html
