Extend early registration

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: May 17, 2018
+  news: Early registration deadline extended. Register and apply for <a href="student-travel-grants.html">Travel Grants</a> or <a href="n2women-fellowships.html">N2Women Fellowship</a>
 - date: May 3, 2018
   news: <a href="program.html">Preliminary program</a> is now online
 - date: April 9, 2018
