--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ addons:
   apt:
     packages:
     - lftp
+    - texlive-extra-utils
+    - imagemagick
+    - ghostscript
 env:
   global:
   - JEKYLL_ENV=production
