Add a small hack to fix program-at-glance PDF size

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
     - texlive-extra-utils
     - imagemagick
     - ghostscript
+    - poppler-utils
 env:
   global:
   - JEKYLL_ENV=production
